K8S/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${BUILD_NUMBER}
        ports:
        - containerPort: 4499
