K8S/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: default
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4499
      nodePort: 30000
  type: NodePort
